// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a table with dashboards 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    width="100%"
  >
    <thead>
      <tr>
        <th
          style="padding: 0.5rem 1rem;"
        >
          <label
            class="usa-sr-only"
            for="selectAll"
          >
            Select all dashboards
          </label>
          <input
            id="selectAll"
            type="checkbox"
          />
        </th>
        <th
          style="width: 30%;"
        >
          <span
            class="font-sans-xs"
          >
            Dashboard name
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          style="width: 30%;"
        >
          <span
            class="font-sans-xs"
          >
            Topic area
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <span
            class="font-sans-xs"
          >
            Last updated
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-base-darkest"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <span
            class="font-sans-xs"
          >
            Created by
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <label
            class="usa-sr-only"
            for="abc"
          >
            USWDS
          </label>
          <input
            id="abc"
            type="checkbox"
          />
        </td>
        <td>
          <a
            aria-label=""
            class="link"
            href="/admin/dashboard/edit/abc"
            target=""
          >
            <span>
              <span
                class="text-bold text-base-darkest font-sans-md"
              >
                USWDS
              </span>
            </span>
          </a>
        </td>
        <td>
          <span
            class="font-sans-md"
          >
            Public Safety
          </span>
        </td>
        <td>
          <span
            class="font-sans-md"
          >
            2020-09-09 08:09
          </span>
        </td>
        <td>
          <span
            class="font-sans-md"
          >
            johndoe
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders an empty table 1`] = `
<div>
  <table
    class="usa-table usa-table--borderless"
    width="100%"
  >
    <thead>
      <tr>
        <th
          style="padding: 0.5rem 1rem;"
        >
          <label
            class="usa-sr-only"
            for="selectAll"
          >
            Select all dashboards
          </label>
          <input
            id="selectAll"
            type="checkbox"
          />
        </th>
        <th
          style="width: 30%;"
        >
          <span
            class="font-sans-xs"
          >
            Dashboard name
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th
          style="width: 30%;"
        >
          <span
            class="font-sans-xs"
          >
            Topic area
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <span
            class="font-sans-xs"
          >
            Last updated
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-base-darkest"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
        <th>
          <span
            class="font-sans-xs"
          >
            Created by
          </span>
          <button
            class="usa-button usa-button--unstyled margin-left-1 hover:text-base-light text-white"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-chevron-down fa-w-14 "
              data-icon="chevron-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
                fill="currentColor"
              />
            </svg>
          </button>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;
